# SDD-S26-ThePantheon

./: .editorconfig  .gitignore  AndrewTestCommit.txt  README.md  database.rules.json  package-lock.json  package.json
backend/: .gitignore  eslint.config.mjs  mock-firebase-events.json  package-lock.json  package.json  server.js
backend/lib/: authenticate.js  cppClient.js  email.js  firebase.js
backend/routes/: chats.js  events.js  notifications.js  statistics.js  users.js
cpp-service/: .clang-format  .clang-tidy  CMakeLists.txt  build-for-render.sh  run-clang-tidy.sh
cpp-service/include/: Event.h  EventCoordinator.h  EventFeedbackManager.h  EventManager.h  GuestUser.h  PhilanthropyEvent.h  RecruitmentEvent.h  SocialEvent.h  User.h  UserManager.h  nlohmann_json_include.hpp
cpp-service/src/: Event.cpp  EventCoordinator.cpp  EventFeedbackManager.cpp  EventManager.cpp  GuestUser.cpp  PhilanthropyEvent.cpp  RecruitmentEvent.cpp  SocialEvent.cpp  User.cpp  UserManager.cpp  main.cpp
eslint/: google-rules.mjs
frontend/: .env.example  .env.local  eslint.config.mjs  next.config.ts  package-lock.json  package.json  stylelint.config.mjs
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/calendar/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/events/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/components/: AddEventModal.tsx  ChangePasswordCard.tsx  EditEventModal.tsx  EditProfileModal.tsx  EventDetailsModal.tsx  EventFeedbackPanel.tsx  EventItem.tsx  EventTypeIcon.tsx  Navbar.tsx  PageShell.tsx  ProfileFieldRow.tsx
frontend/components/calendar/: Calendar.tsx  CalendarHeader.tsx  CalendarModals.tsx  CalendarSidebar.tsx  MonthView.tsx  WeekView.tsx  calendarModel.ts  useCalendarBoard.ts
frontend/components/chat/: ChatShell.tsx
frontend/components/events/: EventsWeekBoard.tsx
frontend/components/forms/: LoginForm.tsx  SignUpForm.tsx
frontend/components/profile/: ProfilePageContent.tsx
frontend/data/: eventTypes.ts  fraternities.ts
frontend/lib/: api.ts  apiBase.ts  apiErrorMessage.ts  dateUtils.ts  firebase.js  firebase.ts  firebaseAuthErrorMessage.ts  usersApi.ts  validateEventForm.ts  weekEventLayout.ts
frontend/types/: calendar.ts
